# actix-template

./: .gitignore  Cargo.toml  LICENSE  README.md
config/: default.toml
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: error.rs  lib.rs  prelude.rs
src/application/: mod.rs
src/domain/models/: user.rs
src/infrastructure/: config.rs  data.rs  mod.rs
src/infrastructure/services/: s3.rs
src/interfaces/controllers/: mod.rs  user.rs
